2006-07-08  Iain <iain@gnome.org>

	* src/TagDialog.cs: Tag stuff.

2006-04-21  Iain <iain@gnome.org>

	* src/InternalProcess.cs: Copied from f-spot.

	* src/PlayerWindow.cs: Use gnome-open to show urls

	* src/InfoWindow.cs: Ditto

2006-04-21  Iain <iain@gnome.org>

	* src/ImageLoader.cs: Handle 404s in the image...useful old last.fm
	returns a nonexistent cover image rather than just not setting an 
	image.

2006-04-21  Iain <iain@gnome.org>

	* src/FMRequest.cs: Moved this here from FMConnection.cs

	* src/InfoWindow.cs: Moved the Request/Parsing code from FMC.cs

	* src/FindStation.cs: Moved the Request/Parsing code from FMC.cs

2006-04-21  Iain <iain@gnome.org>

	* src/PlayerWindow.cs: Apply patch from Adam Lofts to ellipsize the
	labels.

2006-04-15  Iain <iain@gnome.org>

	* src/PlayerWindow.cs: Don't escape strings if the string is null.

	* src/StringUtils.cs: Ditto

2006-04-15  Iain <iain@gnome.org>

	* src/PlayerWindow.cs: Merge patch from Jason Quigley to turn on
	subscriber only stations.

2006-04-15  Iain <iain@gnome.org>

	* src/FMConnection.cs: Add ability to search for fans...

	* src/FindStation.cs: Add a fans of radio.

2006-03-24  Iain <iain@gnome.org>

	* data/glade/PlayerWindow.glade: Shuffle some buttons around a bit

	* src/Artist.cs:
	  src/Song.cs: Derive from ImageLoader rather than creating one.

	* src/FMConnection.cs:
	  src/InfoWindow.cs:
	  src/PlayerWindow.cs:
	  src/RecentStations.cs:
	  src/FindStations.cs: Update to use the new ImageLoader stuff and
	  do general code cleanups.

2006-03-23  Iain <iain@gnome.org>

	* src/RecentStations.cs (LoadRecent): Catch an XmlException for
	malformed recent file.

2006-03-23  Iain <iain@gnome.org>

	* src/RecentStations.cs (LoadRecent): Check if the file exists.