@@ -167,11 +167,14 @@ Artist</property>
 	      <property name="spacing">6</property>
 
 	      <child>
-		<widget class="GtkComboBoxEntry" id="extra_tags">
+		<widget class="GtkVBox" id="extra_tags_container">
 		  <property name="visible">True</property>
-		  <property name="add_tearoffs">False</property>
-		  <property name="has_frame">True</property>
-		  <property name="focus_on_click">True</property>
+		  <property name="homogeneous">False</property>
+		  <property name="spacing">0</property>
+
+		  <child>
+		    <placeholder/>
+		  </child>
 		</widget>
 		<packing>
 		  <property name="padding">0</property>
